# bevy-asset-bug

./: Cargo.toml  flake.nix
assets/shaders/: custom_material_2d.wgsl
src/: main.rs
